# haskell-course

assignments/1/Particles.hsproj/: .uuid  Particles.cabal  Physics.hs  Simulation.hs  Test.hs  TestSupport.hs  Visualise.hs  World.hs  _Particles.hsplay  _Test.hsplay  _Visualise.hsplay
assignments/2/FDS.hsproj/: .uuid  Formula.hs  Solver.cabal  Solver.hs  _Formula.hsplay
assignments/2/Solver.hsproj/: .uuid  Formula.hs  Solver.cabal  Solver.hs  _Formula.hsplay  _Solver.hsplay
exercises/Ex02.hsproj/: .uuid  Ex02.cabal  Ex02.hs  _Ex02.hsplay
exercises/Ex05.hsproj/: .uuid  Ex05.cabal  Ex05.hs  _Ex05.hsplay
exercises/Ex06.hsproj/: .uuid  Ex06.cabal  Ex06.hs  _Ex06.hsplay
exercises/Ex07.hsproj/: .uuid  Ex07.cabal  Ex07.hs  _Ex07.hsplay
exercises/Ex08.hsproj/: .uuid  Ex08.cabal  Ex08.hs  Main.hs
exercises/Lectures.hsproj/: .uuid  Lectures.cabal  Week4.hs  _Week4.hsplay
exercises/WarRoom.hsproj/: .uuid  Code2.hs  Codeword.hs  Common.hs  Cypher1.hs  Cypher1B.hs  IC.hs  Shuffle.hs  WarRoom.cabal  _Code2.hsplay  _Codeword.hsplay  _Common.hsplay  _Cypher1.hsplay  _Cypher1B.hsplay  _IC.hsplay  _Shuffle.hsplay
exercises/ex03.hsproj/: .uuid  Ex03.hs  Main.hs  _Ex03.hsplay  ex03.cabal
exercises/ex04.hsproj/: .uuid  Ex04.hs  Main.hs  _Ex04.hsplay  ex04.cabal
exercises/ex1.hsproj/: .uuid  Ex01.hs  Ex1.cabal  _Ex01.hsplay
exercises/run/: Ex08.hi  Ex08.hs  Main  Main.hi  Main.hs  Test.hi  Test.hs
exercises/sample-exam.hsproj/: .uuid  Sample_exam.hs  _Sample_exam.hsplay  sampleexam.cabal  stack.yaml
exercises/test/: Ex03.hi  Ex03.hs  Ex03.hs.html  Main.hs  Main.hs.html  Main.tix  hpc_index.html  hpc_index_alt.html  main  main.hi
exercises/test/.hpc/: Ex03.mix  Main.mix
