name: ex04
version: 1.0
cabal-version: 1.6
build-type: Simple
license: AllRightsReserved
stability: experimental
data-files:
    input.txt
x-ghc-framework-version: 7.10.3-5.4-1
x-last-ide-version: HfM1.2.0
Executable ex04
  main-is: Ex04.hs
  buildable: True
  build-depends:
      base -any
  other-modules:
      Main
